[package]

name = "leveldb"
version = "0.9.0"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

[lib]

name = "leveldb"

[dependencies]

db-key = "0.0.5"
libc = "0.2.4"
leveldb-sys = { git = "https://github.com/timberio/leveldb-sys", branch = "v3.0.0" }

[dev-dependencies]
tempdir = "0.3.4"

[[test]]
name = "tests"
