[package]

name = "leveldb"
version = "0.8.4"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

[lib]

name = "leveldb"

[dependencies]

db-key = "0.0.5"
libc = "0.2.4"

[dependencies.leveldb-sys-2]
package = "leveldb-sys"
version = "2.0.3"
git = "https://github.com/timberio/leveldb-sys"
branch = "v3.0.0"
features = ["snappy"]
optional = true

[dependencies.leveldb-sys-3]
package = "leveldb-sys"
version = "3.0.0"
git = "https://github.com/timberio/leveldb-sys"
branch = "v3.0.0"
features = ["snappy"]
optional = true

[dev-dependencies]
tempdir = "0.3.4"

[[test]]
name = "tests"
